--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,13 @@ dependencies = [
     "torch>=2.5.1",
     "triton>=3.2.0",
     "mamba_ssm @ git+https://github.com/state-spaces/mamba.git@a6a1dae6efbf804c9944a0c2282b437deb4886d8",
-    "flash_attn==2.8.0.post2",
+    "flash_attn @ file:///home/ka/ka_stud/ka_upygb/repos/hierarchical-hnet/flash_attn-2.8.3+cu128torch2.9-cp312-cp312-linux_x86_64.whl",
     "causal_conv1d @ git+https://github.com/Dao-AILab/causal-conv1d.git@e940ead2fd962c56854455017541384909ca669f",
     "einops",
     "optree",
     "regex",
     "omegaconf",
+    "python-dotenv",
 ]
 [project.urls]
 Repository = "https://github.com/goombalab/hnet"
