--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,24 @@ dependencies = [
     "omegaconf",
     "python-dotenv",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0",
+    "black>=23.0",
+    "ruff>=0.1.0",
+]
+datasets = [
+    "huggingface_hub>=0.20.0",
+    "datasets>=2.0.0",
+]
+
 [project.urls]
 Repository = "https://github.com/goombalab/hnet"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["hnet*"]
+include = ["hnet*", "training*"]
 exclude = ["tests*"]
 
 [build-system]
@@ -39,3 +51,49 @@ requires = [
     "ninja",
 ]
 build-backend = "setuptools.build_meta"
+
+# Extra build dependencies for packages that don't properly declare them
+[tool.uv.extra-build-dependencies]
+causal-conv1d = ["torch>=2.5.1", "packaging", "ninja"]
+mamba-ssm = ["torch>=2.5.1", "packaging", "ninja"]
+
+[tool.black]
+line-length = 100
+target-version = ['py39', 'py310', 'py311', 'py312']
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | build
+  | dist
+  | outputs
+)/
+'''
+
+[tool.ruff]
+line-length = 100
+target-version = "py39"
+
+[tool.ruff.lint]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4", # flake8-comprehensions
+]
+ignore = [
+    "E501",  # line too long (handled by black)
+    "B008",  # do not perform function calls in argument defaults
+    "C901",  # too complex
+]
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
