--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,7 +93,10 @@ ignore = [
     "E501",  # line too long (handled by black)
     "B008",  # do not perform function calls in argument defaults
     "C901",  # too complex
+    "B007",  # loop variable not used (sometimes intentional)
+    "E722",  # bare except (used for robustness in some cases)
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
+"__init__.py" = ["F401", "F403"]  # Allow unused/star imports in __init__.py
+"hnet/modules/rotary.py" = ["F811"]  # Allow function redefinition (conditional implementations)
