--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,11 @@ requires = [
 ]
 build-backend = "setuptools.build_meta"
 
+[dependency-groups]
+dev = [
+    "pre-commit>=4.3.0",
+]
+
 # Extra build dependencies for packages that don't properly declare them
 [tool.uv.extra-build-dependencies]
 causal-conv1d = ["torch>=2.5.1", "packaging", "ninja"]
