fix: hyperparams for H100

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "regex",
     "omegaconf",
     "python-dotenv",
+    "matplotlib>=3.9.4",
 ]
 
 [project.optional-dependencies]
